# drawing_with_LLMs

./: create_project.sh  play.ipynb  rules.md  svg_evaluator_setup.sh
svg-gen-evaluator/: README.md  pyproject.toml
svg-gen-evaluator/examples/: basic_evaluation.py
svg-gen-evaluator/src/svg_gen_evaluator/: __init__.py  cli.py
svg-gen-evaluator/src/svg_gen_evaluator/config/: __init__.py  default.py
svg-gen-evaluator/src/svg_gen_evaluator/core/: __init__.py  clip.py  evaluator.py  renderer.py  validator.py
svg-gen-evaluator/src/svg_gen_evaluator/models/: __init__.py  base.py  simple.py
svg-gen-evaluator/src/svg_gen_evaluator/utils/: io.py  visualization.py
svg_prompt_analyzer/: README.md  config.json  enhancements.md  examples.md  implementation.py  install_dependencies.py  quickstart-guide.md  requirements.txt  setup.py
svg_prompt_analyzer/svg_prompt_analyzer/: __init__.py  enhanced_memory_manager.py  hardware_adaptive_model_manager.py  main.py  optimized_batch_processor.py
svg_prompt_analyzer/svg_prompt_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
svg_prompt_analyzer/svg_prompt_analyzer/analysis/: __init__.py  nlp_utils.py  prompt_analyzer.py  spatial_analyzer.py
svg_prompt_analyzer/svg_prompt_analyzer/core/: __init__.py  batch_processor.py  core_module_integration.py  hardware_manager.py  memory_manager.py  resource_monitor.py
svg_prompt_analyzer/svg_prompt_analyzer/generation/: __init__.py  pattern_factory.py  svg_generator.py
svg_prompt_analyzer/tests/: integration_test.py  test_analyzer.py  test_generator.py
(+23 files in other folders)
